Update website content

--- a/index.html
+++ b/index.html
@@ -583,27 +583,27 @@ URI     : https://colorlib.co
             <div class="hero-wrapper">
                 <div class="hero-grid-vertical scrolling">
                     <div class="hero-card" onclick="window.open('https://camp.honorofkings.com/h5/hero-detail/index.html?lang=id&from=official&heroId=528')">
-                        <img src="/img/hero/528.avif" alt="Assassin 1" loading="lazy">
+                        <img src="./img/hero/528.avif" alt="Assassin 1" loading="lazy">
                         <p class="hero-name">Lam</p>
                     </div>
                     <div class="hero-card" onclick="window.open('https://camp.honorofkings.com/h5/hero-detail/index.html?lang=id&from=official&heroId=153')">
-                        <img src="/img/hero/153.avif" alt="Assassin 2" loading="lazy">
+                        <img src="./img/hero/153.avif" alt="Assassin 2" loading="lazy">
                         <p class="hero-name">Prince of Lanling</p>
                     </div>
                     <div class="hero-card" onclick="window.open('https://camp.honorofkings.com/h5/hero-detail/index.html?lang=id&from=official&heroId=146')">
-                        <img src="/img/hero/146.avif" alt="Assassin 3" loading="lazy">
+                        <img src="./img/hero/146.avif" alt="Assassin 3" loading="lazy">
                         <p class="hero-name">Luna</p>
                     </div>
                     <div class="hero-card" onclick="window.open('https://camp.honorofkings.com/h5/hero-detail/index.html?lang=id&from=official&heroId=531')">
-                        <img src="/img/hero/531.avif" alt="Assassin 4" loading="lazy">
+                        <img src="./img/hero/531.avif" alt="Assassin 4" loading="lazy">
                         <p class="hero-name">Jing</p>
                     </div>
                     <div class="hero-card" onclick="window.open('https://camp.honorofkings.com/h5/hero-detail/index.html?lang=id&from=official&heroId=162')">
-                        <img src="/img/hero/162.avif" alt="Assassin 5" loading="lazy">
+                        <img src="./img/hero/162.avif" alt="Assassin 5" loading="lazy">
                         <p class="hero-name">Nakoruru</p>
                        </div>
                     <div class="hero-card" onclick="window.open('https://camp.honorofkings.com/h5/hero-detail/index.html?lang=id&from=official&heroId=131')">
-                        <img src="/img/hero/131.avif" alt="Assassin 6" loading="lazy">
+                        <img src="./img/hero/131.avif" alt="Assassin 6" loading="lazy">
                         <p class="hero-name">Li Bai</p>
                     </div>
            
