--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ URI     : https://colorlib.co
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Mobland - Mobile App Landing Page Template">
+    <meta name="description" content="PEMBUATAN PLATFORM WEB INTERAKTIF UNTUK GAME HONOR OF KINGS: DESAIN DAN IMPLEMENTASI DENGAN HTML5, CSS, DAN JAVASCRIPT">
     <meta name="keywords" content="HTML5, bootstrap, mobile, app, landing, ios, android, responsive">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
